--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
     "@emoji-mart/react": "^1.1.1",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
-    "@fontsource/roboto": "^4.5.8",
-    "@mui/icons-material": "^5.11.0",
-    "@mui/material": "^5.11.2",
-    "@mui/styled-engine-sc": "^5.11.0",
-    "@mui/system": "^5.11.2",
+    "@fontsource/roboto": "^5.0.5",
+    "@googlemaps/js-api-loader": "^1.16.2",
+    "@mui/icons-material": "^5.13.7",
+    "@mui/material": "^5.13.7",
+    "@mui/styled-engine-sc": "^5.12.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.11",
+    "@types/react": "^18.2.14",
     "axios": "^1.2.3",
     "cookie": "^0.5.0",
     "cors": "^2.8.5",
@@ -39,11 +40,14 @@
     "notistack": "^2.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "typescript": "^4.9.4"
+    "styled-components": "^6.0.3",
+    "typescript": "^4.9.4",
+    "use-debounce": "^9.0.4"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0"
+    "@testing-library/user-event": "^13.5.0",
+    "@types/google.maps": "^3.53.4"
   }
 }
