--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "react-dom": "^18.2.0",
     "styled-components": "^6.0.3",
     "typescript": "^4.9.4",
-    "use-debounce": "^9.0.4"
+    "use-debounce": "^9.0.4",
+    "winston": "^3.9.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
