--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "styled-components": "^6.0.3",
     "typescript": "^4.9.4",
     "use-debounce": "^9.0.4",
+    "uuid": "^9.0.0",
     "winston": "^3.9.0"
   },
   "devDependencies": {
@@ -51,6 +52,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/google.maps": "^3.53.4",
+    "@types/uuid": "^9.0.2",
     "prisma": "^4.16.2"
   }
 }
