--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Edward McNealy <edwardmcnealy@gmail.com> (https://edwardmcnealy.com)",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.367.0",
     "@emoji-mart/data": "^1.1.2",
     "@emoji-mart/react": "^1.1.1",
     "@emotion/react": "^11.10.5",
