--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@mui/icons-material": "^5.13.7",
     "@mui/material": "^5.13.7",
     "@mui/styled-engine-sc": "^5.12.0",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "4.16.2",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.11",
