--- a/package.json
+++ b/package.json
@@ -29,14 +29,6 @@
     "axios": "^1.2.3",
     "cookie": "^0.5.0",
     "cors": "^2.8.5",
-    "eslint": "^8.44.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-import-resolver-alias": "^1.1.2",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
     "jsonwebtoken": "^9.0.0",
     "next": "^13.4.9",
     "next-auth": "^4.22.1",
@@ -54,10 +46,20 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/google.maps": "^3.53.4",
-    "@types/next-auth": "^3.15.0",
     "@types/uuid": "^9.0.2",
     "aws-crt": "^1.15.20",
     "encoding": "^0.1.13",
+    "eslint": "^8.44.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-import-resolver-alias": "^1.1.2",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jest": "^27.2.2",
+    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "jest": "^29.6.1",
     "prisma": "^4.16.2"
   }
 }
