--- a/package.json
+++ b/package.json
@@ -49,17 +49,11 @@
     "@types/uuid": "^9.0.2",
     "aws-crt": "^1.15.20",
     "encoding": "^0.1.13",
-    "eslint": "^8.44.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint": "8.44.0",
+    "eslint-config-next": "13.4.9",
     "eslint-config-prettier": "^8.8.0",
-    "eslint-import-resolver-alias": "^1.1.2",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-jest": "^27.2.2",
-    "eslint-plugin-prettier": "^5.0.0",
-    "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
     "jest": "^29.6.1",
+    "prettier": "^3.0.0",
     "prisma": "^4.16.2"
   }
 }
