--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "typecheck": "tsc"
   },
   "author": "Edward McNealy <edwardmcnealy@gmail.com> (https://edwardmcnealy.com)",
   "license": "ISC",
@@ -36,7 +37,6 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "styled-components": "^6.0.3",
-    "typescript": "^4.9.4",
     "use-debounce": "^9.0.4",
     "uuid": "^9.0.0",
     "winston": "^3.9.0"
@@ -53,6 +53,7 @@
     "eslint-config-next": "13.4.9",
     "eslint-config-prettier": "^8.8.0",
     "jest": "^29.6.1",
+    "typescript": "^4.9.4",
     "prettier": "^3.0.0",
     "prisma": "^4.16.2"
   }
