--- a/package.json
+++ b/package.json
@@ -52,9 +52,10 @@
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
     "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
     "jest": "^29.6.1",
-    "typescript": "^4.9.4",
     "prettier": "^3.0.0",
-    "prisma": "^4.16.2"
+    "prisma": "^4.16.2",
+    "typescript": "^4.9.4"
   }
 }
